2011-09-28  Robert Hogan  <robert@webkit.org>

        Replaced elements squeezed when width is specified as percentage inside a table with Auto layout
        https://bugs.webkit.org/show_bug.cgi?id=29447

        If inserting a 'replaced' element (e.g. image, plugin) in a table cell that is not descendant from
        a block with fixed layout then do not squeeze the element, let it use its intrinsic width and height.

        Reviewed by David Hyatt.

        Test: fast/replaced/table-percent-width.html

        * rendering/RenderBox.cpp:
        (WebCore::shouldExpandToIntrinsicDimension):
        (WebCore::RenderBox::containingBlockReplacedLogicalWidthForContent):
        (WebCore::RenderBox::computeReplacedLogicalWidthUsing):
        (WebCore::RenderBox::computeReplacedLogicalHeightUsing):
        * rendering/RenderBox.h:

2011-10-14  Cary Clark  <caryclark@google.com>

        [Chromium Skia on Mac] Improve focus ring
        https://bugs.webkit.org/show_bug.cgi?id=70124

        Reviewed by Eric Seidel.
        
        The focus ring code formerly outset the bounds of
        the component rectangles by fractional amounts. Because
        the rectangles are SkIRect (integer based), the fractional
        outset had no effect.

        The equivalent code in GraphicsContextMac.mm computes
        the curve radius and rectangle outset with integers, so
        the use of floats in Skia's case, besides not working,
        is unnecessary.

        The Skia code also failed to take the offset into account.
        In LayoutTests, the focus rings either have an offset of
        0 or 2. The CoreGraphics code increases the ring's rectangles
        by the offset, then passes the result to wkDrawFocusRing.

        I did not find any documentation about how wkDrawFocusRing
        further inflates the focus ring, but empirically I determined
        that adding 2 to the offset generated rings with identical
        outer diameters.
 