@@ -1,3 +1,15 @@
+2011-10-14  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r97519.
+        http://trac.webkit.org/changeset/97519
+        https://bugs.webkit.org/show_bug.cgi?id=70156
+
+        Broke 79+ tests on bots (Requested by dglazkov on #webkit).
+
+        * platform/graphics/skia/GraphicsContextSkia.cpp:
+        (WebCore::getFocusRingOutset):
+        (WebCore::GraphicsContext::drawFocusRing):
+
 2011-09-28  Robert Hogan  <robert@webkit.org>
 
         Replaced elements squeezed when width is specified as percentage inside a table with Auto layout
